# Epac

./: .gitignore
Lambda/Lambda/: Lambda.sln
Lambda/Lambda/Lambda/: ClassA.cpp  ClassA.h  Lambda.vcxproj  Lambda.vcxproj.filters  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h  main.cpp
SDL DrawLine/: CMakeLists.txt  DrawLine.sln
SDL DrawLine/DrawLine/: Algebra.h  Camera.cpp  Camera.h  DrawLine.vcxproj  DrawLine.vcxproj.filters  EventsManagerExample.cpp  EventsManagerExample.h  EventsManagerInterface.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  ObjFile.cpp  ObjFile.h  Pixel.h  Vertex.h  Window.cpp  Window.h  main.cpp
SDL DrawLine/gl_shader/: EventsManageShaderGl.cpp  EventsManagerShaderGl.cpp  EventsManagerShaderGl.h  Image.cpp  Image.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  WindowShaderGl.cpp  WindowShaderGl.h  main.cpp
